--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,5 +1,10 @@
+*, *::before, *::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 #editor-contaner {
-    width: 50%;
+    width: 100%;
     margin: 20px 0;
 }
 
